@@ -4,6 +4,12 @@ Obnam NEWS
 
 This file summarizes changes between releases of Obnam.
 
+Version 1.UNRLEASED, released UNRELEASED
+--------------------------------
+
+* Added a note to `--node-size` that it only affects new B-trees.
+  Thanks, Michael Brown.
+
 Version 1.1, released 2012-06-30
 --------------------------------
 
